--- a/carddavquery.qrc
+++ b/carddavquery.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>cardsearch.xml</file>
+        <file>carddavexport.xml</file>
     </qresource>
 </RCC>
